[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/Menus/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/Teletactile-3zavL.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
margin_right = 1150.0
margin_bottom = 750.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1150.0
margin_bottom = 750.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1150.0
margin_bottom = 750.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 341.0
margin_top = 290.0
margin_right = 809.0
margin_bottom = 459.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 468.0
margin_bottom = 95.0

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 468.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="Exit" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 468.0
margin_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Exit"]
margin_left = 128.0
margin_right = 340.0
margin_bottom = 33.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="SelectorRetry" type="Label" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 33.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="RetryLabel" type="Label" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 212.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "Retry"

[node name="Exit2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 468.0
margin_bottom = 169.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Exit2"]
margin_left = 128.0
margin_right = 340.0
margin_bottom = 33.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="SelectorQuit" type="Label" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 33.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="QuitLabel" type="Label" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 212.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
